added show more button
Co-authored-by: yashshahir0111 <yashshahir0111@users.noreply.github.com>

--- a/style.css
+++ b/style.css
@@ -35,6 +35,23 @@ h2 {
     border: 1px solid black;
     margin: 0 auto;
     width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#view-more {
+    /* border: 1px solid black; */
+    /* border-top: none; */
+    margin: 0 auto;
+    width: 50%;
+    text-align: center;
+}
+
+#view-more a {
+    cursor: pointer;
+}
+
+#sect {
+    display: none;
 }
 
 table,
