--- a/style.css
+++ b/style.css
@@ -42,11 +42,49 @@ h2 {
     /* border: 1px solid black; */
     /* border-top: none; */
     margin: 0 auto;
-    width: 50%;
+    /* width: 50%; */
     text-align: center;
+    background-color: whitesmoke;
 }
 
 #view-more a {
+    cursor: pointer;
+}
+
+#view-less {
+    /* border: 1px solid black; */
+    /* border-top: none; */
+    margin: 0 auto;
+    /* width: 50%; */
+    display: none;
+    text-align: center;
+    background-color: whitesmoke;
+}
+
+#view-less a {
+    cursor: pointer;
+}
+
+#show-certificates {
+    margin: 0 auto;
+    /* width: 50%; */
+    text-align: center;
+    background-color: lightcyan;
+}
+
+#show-certificates a {
+    cursor: pointer;
+}
+
+#hide-certificates {
+    margin: 0 auto;
+    /* width: 50%; */
+    display: none;
+    text-align: center;
+    background-color: lightcyan;
+}
+
+#hide-certificates a {
     cursor: pointer;
 }
 
